--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ a:hover{
 }
 
 
-.fixed-header .main-header{
+.fixed-header {
     background: rgba(255,255,255,0.9);
     backdrop-filter: blur(10px);
     box-shadow: 0 0.125rem rgba(55, 55, 55, 0.7);
@@ -311,3 +311,64 @@ main{
     60%{transform: translate(-263px,-164px) rotate(108deg);}
     100%{transform: translate(-1px,0) rotate(180deg);}
 }
+
+
+.paragraph-1{
+    padding: 28px;
+}
+
+.paragraph-1 span{
+    color: var(--primary-color);
+}
+/**Card Main**/
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 28px 15px;
+}
+
+.card{
+    transition: all 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.15);
+}
+
+.card img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.card-title{
+
+    font-weight: 900;
+    color: var(--dark-color);
+    margin: 10px 0;
+}
+
+/*Footer*/
+
+.main-footer{
+    background: var(--dark-color);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 2px solid var(--primary-color);
+    color: rgba(255, 255, 255, 0.75)
+}
+
+.main-footer a{
+    color: #fff;
+    font-size: 25px;
+}
+
+.main-footer a:hover{
+    color: var(--primary-color);
+}
+.footer .nav a + a{
+    margin-left:18px;
+}
+
