--- a/pages/About/assets/css/style.css
+++ b/pages/About/assets/css/style.css
@@ -1,20 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
+
 :root{
     --primary-color: #FF651C;
     --dark-color: #373737;
 }
+
 
 body{
     font-family: "Roboto slab", sans-serif;
     font-weight: 400;
     color: #555;
     background-color: #f5f5f5;
+
 }
+
 
 img{
     max-width: 100%;
 }
+
 
 a{
     color: var(--primary-color);
@@ -35,13 +40,14 @@ a:hover{
 }
 
 /*Header*/
+
 .main-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
     z-index: 11;
-    background: transparent;
+    background:transparent;
     transition: 0.3s background;
 }
 
@@ -61,8 +67,9 @@ a:hover{
     font-size: 14px;
     color: var(--dark-color);
     letter-spacing: 3px;
-    position: relative;
+    position:relative;
 }
+
 
 .main-header .navbar-nav > li > .nav-link:after {
     content: "";
@@ -82,8 +89,9 @@ a:hover{
 
 .main-header .navbar-nav > li > .nav-link:hover:after{
     left: 0;
-    right: auto;
+    right:auto;
     width: 100%;
+
 }
 
 @media(max-width: 991px) {
@@ -125,10 +133,12 @@ a:hover{
     }
 }
 
+
 .fixed-header {
     background: rgba(255,255,255,0.9);
     backdrop-filter: blur(10px);
     box-shadow: 0 0.125rem rgba(55, 55, 55, 0.7);
+
 }
 
 .colored-btn{
@@ -141,10 +151,15 @@ a:hover{
     letter-spacing: 2px;
     text-transform: uppercase;
     transition: ease all 0.3s;
-    display: inline-block;
+    display:inline-block;
     background-color: var(--primary-color);
     color: #fff;
     box-shadow: 6px 6px 0 var(--dark-color);
+}
+
+.main-content-1{
+    padding: 80px 0;
+
 }
 
 .colored-btn:hover{
@@ -159,6 +174,27 @@ a:hover{
 
 .bg-dark {
     background-color: var(--dark-color) !important;
+}
+
+main{
+    position: relative;
+    z-index: 1;
+}
+
+/*Home*/
+.home-section {
+    position:relative;
+    overflow: hidden;
+    padding-bottom: 100px;
+}
+
+
+/**Card Main**/
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 28px 15px;
 }
 
 /*About*/
