--- a/pages/Activity/assets/css/style.css
+++ b/pages/Activity/assets/css/style.css
@@ -158,7 +158,7 @@ a:hover{
 }
 
 .main-content-1{
-    padding: 50px 0;
+    padding: 80px 0;
 
 }
 
@@ -185,7 +185,6 @@ main{
 .home-section {
     position:relative;
     overflow: hidden;
-    padding-top: 150px;
     padding-bottom: 100px;
 }
 
@@ -222,6 +221,7 @@ main{
     background: var(--dark-color);
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-top: 130px;
     border-top: 2px solid var(--primary-color);
     color: rgba(255, 255, 255, 0.75)
 }
@@ -242,4 +242,35 @@ main{
     background-color: var(--primary-color);
     color: #fff;
     box-shadow: 6px 6px 0 var(--dark-color);
+}
+
+@media(max-width: 767px) {
+    body {
+        font-size: 14px;
+    }
+
+    .main-header .navbar-nav > li > .nav-link {
+        font-size: 12px;
+    }
+
+    .main-header .navbar-toggler span {
+        width: 20px;
+        height: 2px;
+    }
+
+    .main-content-1 {
+        padding: 60px 0;
+    }
+
+    .container {
+        padding: 20px 10px;
+    }
+
+    .card-title {
+        font-size: 18px;
+    }
+
+    .main-footer {
+        margin-top: 100px;
+    }
 }
