--- a/pages/Contact/assets/css/style.css
+++ b/pages/Contact/assets/css/style.css
@@ -180,147 +180,13 @@ main{
 .home-section {
     position:relative;
     overflow: hidden;
-
     padding-bottom: 100px;
 }
 
-@media(max-width: 767px){
-    .home-section{
-        padding-bottom: 70px;
-    }
-}
 
 
-.home-section .container{
-    position: relative;
-    z-index: 1;
-}
 
-.home-section .home-intro h6{
-    font-weight: 600;
-    color: var(--dark-color);
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    font-size: 16px;
-    margin: 0 0 20px;
-}
-
-@media screen and (max-width: 767px){
-    .home-section .home-intro h6{
-        margin: 0 0 20px;
-    }
-}
-
-.home-section .home-intro h1{
-    font-size: 70px;
-    font-weight: 700;
-    color: var(--dark-color);
-    margin: 0 0 35px;
-    line-height: 1;
-}
-
-.home-section .home-intro h1 span{
-    border-bottom: 4px solid #FEC448;
-}
-
-.home-section .home-intro p{
-    font-size: 18px;
-}
-
-.home-image img{
-    height: 450px;
-    width: 450px;
-    border-radius: 50%;
-    border: 2px solid #000;
-    position:relative;
-    z-index: -2;
-}
-
-
-.anim-elements {
-    position: absolute;
-    top: 0;
-    left:0;
-    width:100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-}
-
-.anim-elements .anim-element{
-    position: absolute;
-    font-size: 30px;
-}
-
-.anim-elements .anim-element:nth-child(1){
-    top:12%;   
-    left:15%;
-    color:var(--primary-color);
-    animation: aniOne 13s infinite linear alternate;
-}
-.anim-elements .anim-element:nth-child(2){
-    bottom:15%;   
-    left:45%;
-    color:indigo;
-    animation: anitwo 13s infinite linear alternate;
-}
-.anim-elements .anim-element:nth-child(3){
-    bottom:20%;   
-    left:30%;
-    color:cornflowerblue;
-    animation: anithree 13s infinite linear alternate;
-}
-.anim-elements .anim-element:nth-child(4){
-    bottom: 15%;
-    right: 25%;
-    color:cyan;
-    animation: aniFour 13s infinite linear alternate;
-}
-.anim-elements .anim-element:nth-child(5){
-    top:18%;   
-    right:25%;
-    color:#444140;
-    animation: anithree 13s infinite linear alternate;
-}
-
-@keyframes aniOne {
-    0%{transform: translate(0,0) rotate(0);}
-    40%{transform: translate(141px,72px) rotate(75deg);}
-    80%{transform: translate(-40,72px) rotate(145deg);}
-    100%{transform: translate(0,0) rotate(0);}
-
-}
-
-@keyframes anitwo {
-    0%{transform: translate(0,0) rotate(0) scale(1);}
-    40%{transform: translate(73px, -1px) rotate(36deg) scale(.9);}
-    80%{transform: translate(83px,122px) rotate(108deg) scale(1.2);}
-    100%{transform: translate(0,0) rotate(0) scale(1);}
-
-}
-
-@keyframes anithree {
-    0%{transform: translate(-300px,151px) rotate(0);}
-    100%{transform: translate(251px,-200px) rotate(180deg);}
-
-}
-
-@keyframes aniFour{
-    0%{transform: translate(61px,-99px) rotate(0);}
-    20%{transform: translate(4px,-190px) rotate(38deg);}
-    60%{transform: translate(-263px,-164px) rotate(108deg);}
-    100%{transform: translate(-1px,0) rotate(180deg);}
-}
-
-
-.paragraph-1{
-    padding: 28px;
-}
-
-.paragraph-1 span{
-    color: var(--primary-color);
-}
-/**Card Main**/
+/**container**/
 
 .container{
     max-width: 1200px;
@@ -328,27 +194,52 @@ main{
     padding: 28px 15px;
 }
 
-.card{
-    transition: all 0.3s;
+/**contact form**/
+
+.contact-form{
+    padding:15px;
+    background: #fff;
 }
 
-.card:hover {
-    transform: scale(1.15);
+.contact-form .lead{
+    font-weight: 400;
+    font-size: 18px;
+    margin:0 0 30px;
 }
 
-.card img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    border-radius: 5px;
+.contact-form .form-control{
+    border-radius: 0;
+    border: 1px solid var(--dark-color);
+    box-shadow: none;
+    padding: 0.575rem .75rem;
 }
 
-.card-title{
-
-    font-weight: 900;
-    color: var(--dark-color);
-    margin: 10px 0;
+.contact-info{
+    margin:0;
+    padding:0;
+    list-style: none;
 }
+
+.contact-infos{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.contact-infos li{
+    margin-bottom: 15px;
+}
+
+.contact-infos li:last-child{
+    margin-bottom: 0;
+}
+
+.contact-infos i {
+    font-size: 30px;
+    color: var(--primary-color);
+    margin-right: 10px; 
+}
+
 
 /*Footer*/
 
