feat(credits page) add pictures for the credit and link properly refractor( home, credit,activity and contact page) update the logo and title of the page docs(readme) add description

--- a/pages/Credits/assets/css/style.css
+++ b/pages/Credits/assets/css/style.css
@@ -189,6 +189,13 @@ main{
     margin: 0 auto;
     padding: 28px 15px;
 }
+/**Credits**/
+
+
+.main-content-2{
+    padding-bottom: 200px ;
+}
+
 
 /*Footer*/
 
